Name changes of entities

--- a/domain.yml
+++ b/domain.yml
@@ -18,14 +18,14 @@ intents:
 
 entities:
 
-  - grn_no
-  - purchase_order
-  - status_code
-  - vendor_name
-  - voucher_name
-  - site_name
-  - requisition_name
-  - material_category
+  - grn_reference
+  - po_reference
+  - status
+  - vendor_code
+  - voucher_reference
+  - site_code
+  - rqn_reference
+  - material_reference
 
 responses:
   utter_greet:
